--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ jinja2==3.1.2
 python-multipart==0.0.6
 sqlalchemy==2.0.23
 aiofiles==23.2.1
-python-dateutil==2.8.2 
+python-dateutil==2.8.2
+pandas==2.1.4 
